Ignore CLion .idea directory.

--- a/.gitignore
+++ b/.gitignore
@@ -291,7 +291,7 @@ cmake_install.cmake
 install_manifest.txt
 compile_commands.json
 CTestTestfile.cmake
-
+.idea/
 #======================================================================
 # ii. C/C++
 #======================================================================
